# DeclarativeAssetBundle

./: README.md
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy.yml  validate.yml
dabProject_r/: README.md  databricks.yml  pyproject.toml
dabProject_r/.github/workflows/: deploy.yml
dabProject_r/resources/jobs/: job_sales.yml
dabProject_r/src/notebooks/: NB_01_bronze.ipynb  NB_02_silver.ipynb  NB_03_gold.ipynb
